<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivitySetting"
    android:background="@drawable/gras_bg"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".ActivitySetting"
        android:background="@drawable/test"
        android:layout_margin="30dp"
    >

        <TextView
            android:id="@+id/tv_nastaveni_hry"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/sw_tv_language"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:fontFamily="@font/welcome_red"
            android:textSize="30sp"
            android:textStyle="bold"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_game_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sw_tv_time"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/sp_word_time"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@android:color/holo_red_light"
                android:popupBackground="#E6ffffff"
                android:visibility="visible"
                android:layout_marginRight="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="81dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/tv_gamer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sw_tv_player1"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_light"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/et_gamer1"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textStyle="bold"
                android:background="@android:color/holo_blue_dark"
                android:layout_marginRight="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="81dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/tv_gamer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sw_tv_player2"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_light"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/et_gamer2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textStyle="bold"
                android:background="@android:color/holo_blue_dark"
                android:layout_marginRight="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="81dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/tv_gamer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sw_tv_player3"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_light"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/et_gamer3"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textStyle="bold"
                android:background="@android:color/holo_blue_dark"
                android:layout_marginRight="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="81dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/tv_gamer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sw_tv_player4"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_light"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/et_gamer4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textStyle="bold"
                android:background="@android:color/holo_blue_dark"
                android:layout_marginRight="10dp" />
        </LinearLayout>


</LinearLayout>
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="showGameActivity"
        android:background="@drawable/test"
        android:text="@string/sw_bt_play"
        />

</LinearLayout>